--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,14 @@ where = ["src"]
 
 [project]
 name = "dprojectstools"
-version = "0.0.8"
+version = "0.0.16"
 authors = [
   { name="Marc Delos", email="marcdp@dprojects.com" },
+]
+dependencies = [
+    "keyring>=25.6.0",
+    "cryptography>=44.0.0",
+    "pyperclip>=1.9.0"
 ]
 description = "A set of development tools"
 readme = "README.md"
@@ -22,6 +27,9 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+
+[project.scripts]
+edit = "dprojectstools.editor.__main__:main"
 
 [project.urls]
 Homepage = "https://github.com/marcdp/dprojectstools"
