--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ authors = [
 dependencies = [
     "keyring>=25.6.0",
     "cryptography>=44.0.0",
-    "pyperclip>=1.9.0"
+    "pyperclip>=1.9.0",
+    "lxml>=5.3.0",
+    "boto3>=1.36.12",
+    "charset-normalizer>=3.4.0"
 ]
 description = "A set of development tools"
 readme = "README.md"
@@ -30,6 +33,8 @@ classifiers = [
 
 [project.scripts]
 edit = "dprojectstools.editor.__main__:main"
+secrets = "dprojectstools.secrets.__main__:main"
+i18n-xgettext = "dprojectstools.i18n.xgettext:main"
 
 [project.urls]
 Homepage = "https://github.com/marcdp/dprojectstools"
